--- a/style.css
+++ b/style.css
@@ -11,3 +11,45 @@ header {
     color: #666666;
 }
 
+.bbox {
+    display: block;
+}
+
+.bbox:hover {
+    border: 5px solid gray;
+}
+
+#content {
+    display: flex;
+    flex-wrap: wrap;background: lightblue;
+}
+
+#letterbox {
+    display: flex;
+    gap: 10px;
+    padding-left: 5px;
+    padding-top: 5px;
+}
+
+.letter {
+    background: lightgray;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+@media(max-width: 800px) {
+    .bbox {
+        width: calc(50% - 10px);
+    }
+}
+
+@media(max-width: 500px) {
+    .bbox {
+        width: calc(100% - 10px);
+    }
+}
