--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@ header {
 
 .bbox {
     display: block;
+    text-decoration: none;
+    border: 5px solid lightgray;
+    padding: 10px;
+    color: black;
+    width: calc(33% - 10px);
+    box-sizing: border-box;
+    margin: 5px;
 }
 
 .bbox:hover {
